k8s/namespce.yml
#create the namespace
apiVersion: v1  
kind: Namespace
metadata:  
  name: microservices
  labels:
    name: microservices
